# gcd-gen-etic

./: CMakeLists.txt  README.md  configure
src/: a_main.cpp  distance_t.cpp  distance_t.hpp  genetic.cpp  genetic.hpp  imgops.cpp  imgops.hpp  shape.cpp  shape.hpp
tests/: imgops_test.cpp  shape_test.cpp
